# depth-sensing-roject

./: CMakeLists.txt  README.md  requirements.txt  setup.py  test_cpp_integration.py
src/: object_detection_bindings.cpp
src/cpp/: bindings.cpp  object_detection.cpp  object_detection.h
src/python/: alert_system.py  depth_simulation.py  main.py  simple_scene.py  visualization.py
tests/: test_depth_sensing.py
